--- a/history.html
+++ b/history.html
@@ -3,288 +3,56 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Class 10 History Notes</title>
+  <title>History Notes - Class 10</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      line-height: 1.6;
-      margin: 20px;
-      background-color: #f4f4f9;
-      color: #333;
+      background: #f8f9fa;
+      padding: 20px;
     }
     h1 {
       text-align: center;
       color: #2c3e50;
     }
-    h2 {
-      color: #34495e;
-      border-bottom: 2px solid #ccc;
-      padding-bottom: 5px;
-    }
     .chapter {
-      background: #fff;
+      background: white;
       padding: 15px;
-      margin-bottom: 20px;
-      border-radius: 8px;
+      margin: 10px 0;
+      border-radius: 10px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
-    p {
-      text-align: justify;
-    }
-    .back {
-      display: block;
-      margin: 20px auto;
-      text-align: center;
-    }
-    .back a {
-      background: #3498db;
-      color: #fff;
-      padding: 10px 20px;
+    .chapter a {
       text-decoration: none;
-      border-radius: 5px;
+      font-size: 18px;
+      color: #007bff;
     }
-    .back a:hover {
-      background: #2980b9;
+    .chapter a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
-  <h1>Class 10 History Notes (2025–26)</h1>
+  <h1>📚 History Notes - Class 10</h1>
 
   <div class="chapter">
-    <h2>Chapter 1: The Rise of Nationalism in Europe</h2>
-    <p>The French Revolution and the Idea of the Nation
-
-French Revolution of 1789 was the first clear expression of nationalism.
-
-• Steps taken by French Revolutionaries to create a sense of collective identity amongst the French people:
-
-→ Ideas of La patrie and Le citoyen
-
-→ New French Flag
-
-→ Estates General was elected and renamed National Assembly
-
-→ New hymns composed and oaths taken
-
-→ Centralized administration system
-
-→ Internal customs duties and dues were abolished
-
-→ Uniform system of weights and measures were introduced
-
-→ French became the common language
-
-Napolean
-
-• Ruled France from 1799 to 1815.
-
-• Gained absolute powers in 1799 by becoming the First Consul.
-
-Civil Code of 1804 / Napoleonic Code
-
-• Equality before the law was established
-
-• Secured the right to property
-
-• Simplified administrative measures
-
-• Abolished feudal system
-
-• Freed peasants from serfdom and manorial dues
-
-• Guild restrictions were removed
-
-• Transport and communication systems were improved.
-
-Napoleon took away political freedom, increased taxes, imposed censorship and forced people to join French army.
-
-The Making of Nationalism in Europe
-
-No Nation states were in Europe because of not common identity or culture.
-
-• People residing in different areas spoke different languages.
-
-→ Example: Hungary half of the population spoke Magyar other half spoke variety of dialects and in Galicia people spoke Polish.
-
-The Aristocracy and the New Middle Class
-
-• Aristocracy
-
-→ The land owning class.
-
-→ Spoke French connected by ties of marriages.
-
-→ Numerically a small group.
-
-• Peasantry
-
-→ Majority of population
-
-• Middle class
-
-→ New Social class emerged with the growth of towns and emergence of commercial classes.
-
-→ Educated class where ideas of nationality gained popularity.
-
-What did Liberal Nationalism Stand for?
-
-• Liberalism stood for freedom for the individual and equality for all before the law
-
-→ The end of autocracy and clerical privileges
-
-→ A constitution and representative government through parliament.
-
-• In the economic sphere liberalism stood for the freedom of markets and the abolition of state-imposed restrictions on the movement of goods and capital.
-
-• Zollverein abolished tariff barriers, reduced the number of currencies to two, and promoted a network of railways to stimulate mobility.
-
-A New Conservatism after 1815
-
-• Believed that established institutions of state and society should be preserved, with the changes initiated by Napoleon.
-
-Treaty of Vienna (1815)
-
-• Bourbon dynasty was restored to power in France
-
-• A series of states created on the French boundary for preventing French expansion in future.
-
-• German confederation was left untouched.
-
-• Main intentions was to restore the monarchies that had been overthrown by Napoleon.
-
-The Revolutionaries
-
-Acommitment to oppose monarchical forms that had been established after the Vienna Congress, and to fight for liberty and freedom.
-
-Giuseppe Mazzini
-
-• Born in Genoa in 1807
-
-• A member of the secret society of Carbonari
-
-• Founded Young Italy in Marseellies, Young Europe in Berne.
-
-• Believed in the unification of Italy into a republic.
-
-The Age of Revolutions: 1830-1848
-
-• In July 1830, Bourbon kings of France were overthrown and a constitutional monarchy was established.
-
-• Belgium broke away from the United kingdoms of the Netherlands.
-
-• Greece which had been a part of the Ottomon Empire since the fifteenth century, struggled for independence.
-
-→ Treaty of Constantinople of 1832 recognised Greece as an independent nation.
-The Romantic Imagination and National Feeling
-
-• A cultural movement which sought to develop a particular form of nationalist sentiment, criticized the glorification of reason and science and focused instead on emotions, intuition and mystical feelings.
-
-• German philosopher Johann Gottfried Herder tried to discovered culture among common people, through folk songs, folk poetry and folk dances.
-
-Hunger, Hardship and Popular Revolt
-
-• In most countries there were more seekers of jobs than employment.
-
-• Population from rural areas migrated to the cities to live in overcrowded slums.
-
-• The rise of food prices or a year of bad harvest led to widespread pauperism in town and country.
-
-• In 1848, the Population of Paris came out on the roads and Louis Philippe was forced to flee and National Assembly proclaimed a Republic.
-
-• In 1845, weavers in Silesia led a revolt against contractors.
-
-1848: The Revolution of the Liberals
-
-• The revolution was led by educated middle classes who combined their demands for constitutionalism with national unification.
-
-Frankfurt Parliament
-
-• On 18 May 1848, members of political association’s elected 831 representatives who took their places in the Frankfurt Parliament convened in the Church of St. Paul and drafted a Constitution for the German nation.
-
-• It was opposed by King of Prussia and also lost its social basis as no rights were given to workers and women.
-
-• It forced the autocratic monarchs to introduce some changes – serfdom and bonded labour was abolished
-
-• Hungarians were granted more autonomy.
-
-The Making of Germany and Italy
-
-Germany
-
-• Otto Van Bismarck with the help of Prussian army and bureaucracy took on the leadership of the movement for national unification.
-
-• Three war over seven years ended in Prussian victory and completed the process of unification.
-
-• Kaiser William I of Prussia headed the new German Empire.
-
-Italy
-
-• Italy was divided into seven states of which only Sardinia Piedmont was ruled by an Italian Princely state.
-
-• Initially a unification programme was initiated by Giuseppe Mazzini, but it failed.
-
-• Chief Miniser Cavour led the movement, with the help of Giuseppe Garibaldi.
-
-• In 1861, Victor Emmanuel II was proclaimed king of united Italy.
-
-The Strange Case of Britain
-
-• In 1688, England established as a nation state.
-
-• English parliament seized power from the monarchy.
-
-• The Act of Union 1707 resulted in the formation of the ‘United Kingdom of Great Britain’.
-
-• In 1801, Ireland was forcibly taken by the British after the failed revolution.
-
-• A new ‘British Nation’ was founded through the propagation of a dominant English culture.
-
-Visualising the Nation
-
-• Nations were portrayed as female figure (Allegory).
-
-• The female form that was chosen to personify the nation did not stand for any particular woman in real life, rather it sought to give the abstract idea of the nation a concrete form.
-
-• In France the allegory was christened as Marianne, in Germany – Germania became the allegory.
-
-Nationalism and Imperialism
-
-• The Balkans comprised modern-day Romania, Bulgaria, Albania, Greece, Macedonia, Croatia, Bosnia-Herzegovina, Slovenia, Serbia and Montenegro.
-
-• Balkans was a region of geographical and ethnic variation was under the control of the Ottomon Empire.
-
-• The idea of Romantic nationalism made this region very explosive.
-
-• The Balkan states were fiercely jealous of each other and each hoped to gain more territory at the expense of each other.
-
-• European powers were also looking for the extend their control over the area.
-
-• This led to a series of wars in the region and finally resulted in the First World War.</p>
+    <a href="pdf/history_ch1.pdf" target="_blank">Chapter 1: The Rise of Nationalism in Europe</a>
   </div>
 
   <div class="chapter">
-    <h2>Chapter 2: Nationalism in India</h2>
-    <p>The growth of nationalism in India began in the 20th century with the Swadeshi Movement, Partition of Bengal, and Gandhiji’s leadership. Gandhiji launched the Non-Cooperation Movement (1920), Civil Disobedience Movement (1930), and Quit India Movement (1942). Peasants, tribals, women, and industrial workers actively participated. Symbols like Bharat Mata, the tricolour flag, and hymns like Vande Mataram created a sense of unity. The Salt March (1930) was a turning point in India’s struggle for independence.</p>
+    <a href="pdf/history_ch2.pdf" target="_blank">Chapter 2: Nationalism in India</a>
   </div>
 
   <div class="chapter">
-    <h2>Chapter 3: The Making of a Global World</h2>
-    <p>This chapter explains how the world became interconnected. In the 19th century, trade, migration, and cultural exchange grew. The Silk Route connected Asia with Europe. The Industrial Revolution in Britain expanded global trade. Indentured labourers migrated to different colonies, carrying Indian culture abroad. The Great Depression of the 1930s severely impacted the global economy. After 1945, institutions like IMF and World Bank were formed to stabilize economies. Globalisation has shaped the modern world significantly.</p>
+    <a href="pdf/history_ch3.pdf" target="_blank">Chapter 3: The Making of a Global World</a>
   </div>
 
   <div class="chapter">
-    <h2>Chapter 4: The Age of Industrialisation</h2>
-    <p>The Industrial Revolution began in Britain in the 18th century. Factories, machines, and new inventions like the steam engine transformed industries. In India, traditional industries such as textiles flourished, but later declined under British colonial rule due to cheap imports from England. Indian entrepreneurs like Dwarkanath Tagore and Jamsetji Tata tried to industrialise India. Workers initially faced poor conditions but gradually formed unions to demand better wages and rights.</p>
+    <a href="pdf/history_ch4.pdf" target="_blank">Chapter 4: The Age of Industrialisation</a>
   </div>
 
   <div class="chapter">
-    <h2>Chapter 5: Print Culture and the Modern World</h2>
-    <p>The invention of the printing press by Gutenberg in the 15th century revolutionized the spread of knowledge. Books and newspapers spread ideas of the Renaissance, Reformation, and later the French Revolution. In India, print culture supported social reform movements by Raja Rammohan Roy, Ishwar Chandra Vidyasagar, and others. Newspapers like Kesari and Amrita Bazar Patrika created awareness against colonial rule. Print culture played a vital role in spreading nationalism in India.</p>
+    <a href="pdf/history_ch5.pdf" target="_blank">Chapter 5: Print Culture and the Modern World</a>
   </div>
 
-  <div class="back">
-    <a href="index.html">⬅ Back to Home</a>
-  </div>
 </body>
 </html>
