--- a/history.html
+++ b/history.html
@@ -35,9 +35,10 @@
   <h1>📚 History Notes - Class 10</h1>
 
   <div class="chapter">
-    <a href="TheRiseOfNationalismInEurope/chapter1.pdf" target="_blank">
-  Chapter 1: The Rise of Nationalism in Europe
-    </a>
+  <a href="chapter1.pdf" target="_blank">
+    Chapter 1: The Rise of Nationalism in Europe
+  </a>
+  </div>
 
   <div class="chapter">
     <a href="pdf/history_ch2.pdf" target="_blank">Chapter 2: Nationalism in India</a>
