--- a/history.html
+++ b/history.html
@@ -7,7 +7,8 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f8f9fa;
+      background: #f4f6f9;
+      margin: 0;
       padding: 20px;
     }
     h1 {
@@ -32,28 +33,26 @@
   </style>
 </head>
 <body>
-  <h1>📚 History Notes - Class 10</h1>
+  <h1>📘 History Notes - Class 10</h1>
 
   <div class="chapter">
-  <a href="chapter1.pdf" target="_blank">
-    Chapter 1: The Rise of Nationalism in Europe
-  </a>
+    <a href="chapter1.pdf" target="_blank">Chapter 1: The Rise of Nationalism in Europe</a>
   </div>
 
   <div class="chapter">
-    <a href="pdf/history_ch2.pdf" target="_blank">Chapter 2: Nationalism in India</a>
+    <a href="chapter2.pdf" target="_blank">Chapter 2: Nationalism in India</a>
   </div>
 
   <div class="chapter">
-    <a href="pdf/history_ch3.pdf" target="_blank">Chapter 3: The Making of a Global World</a>
+    <a href="chapter3.pdf" target="_blank">Chapter 3: The Making of a Global World</a>
   </div>
 
   <div class="chapter">
-    <a href="pdf/history_ch4.pdf" target="_blank">Chapter 4: The Age of Industrialisation</a>
+    <a href="chapter4.pdf" target="_blank">Chapter 4: The Age of Industrialisation</a>
   </div>
 
   <div class="chapter">
-    <a href="pdf/history_ch5.pdf" target="_blank">Chapter 5: Print Culture and the Modern World</a>
+    <a href="chapter5.pdf" target="_blank">Chapter 5: Print Culture and the Modern World</a>
   </div>
 
 </body>
