--- a/chemistry.html
+++ b/chemistry.html
@@ -1,1 +1,59 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Chemistry Notes - Class 10</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f6f9;
+      margin: 0;
+      padding: 20px;
+    }
+    h1 {
+      text-align: center;
+      color: #2c3e50;
+    }
+    .chapter {
+      background: white;
+      padding: 15px;
+      margin: 10px 0;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    .chapter a {
+      text-decoration: none;
+      font-size: 18px;
+      color: #007bff; /* Blue for Chemistry */
+    }
+    .chapter a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <h1>⚗️ Chemistry Notes - Class 10</h1>
 
+  <div class="chapter">
+    <a href="chem_chapter1.pdf" target="_blank">Chapter 1: Chemical Reactions and Equations</a>
+  </div>
+
+  <div class="chapter">
+    <a href="chem_chapter2.pdf" target="_blank">Chapter 2: Acids, Bases and Salts</a>
+  </div>
+
+  <div class="chapter">
+    <a href="chem_chapter3.pdf" target="_blank">Chapter 3: Metals and Non-Metals</a>
+  </div>
+
+  <div class="chapter">
+    <a href="chem_chapter4.pdf" target="_blank">Chapter 4: Carbon and Its Compounds</a>
+  </div>
+
+  <div class="chapter">
+    <a href="chem_chapter5.pdf" target="_blank">Chapter 5: Periodic Classification of Elements</a>
+  </div>
+
+</body>
+</html>
