--- a/civics.html
+++ b/civics.html
@@ -1,1 +1,71 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Civics Notes - Class 10</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f6f9;
+      margin: 0;
+      padding: 20px;
+    }
+    h1 {
+      text-align: center;
+      color: #2c3e50;
+    }
+    .chapter {
+      background: white;
+      padding: 15px;
+      margin: 10px 0;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    .chapter a {
+      text-decoration: none;
+      font-size: 18px;
+      color: #9c27b0; /* Purple for Civics */
+    }
+    .chapter a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <h1>🏛 Civics Notes - Class 10</h1>
 
+  <div class="chapter">
+    <a href="civics_chapter1.pdf" target="_blank">Chapter 1: Power Sharing</a>
+  </div>
+
+  <div class="chapter">
+    <a href="civics_chapter2.pdf" target="_blank">Chapter 2: Federalism</a>
+  </div>
+
+  <div class="chapter">
+    <a href="civics_chapter3.pdf" target="_blank">Chapter 3: Democracy and Diversity</a>
+  </div>
+
+  <div class="chapter">
+    <a href="civics_chapter4.pdf" target="_blank">Chapter 4: Gender, Religion and Caste</a>
+  </div>
+
+  <div class="chapter">
+    <a href="civics_chapter5.pdf" target="_blank">Chapter 5: Popular Struggles and Movements</a>
+  </div>
+
+  <div class="chapter">
+    <a href="civics_chapter6.pdf" target="_blank">Chapter 6: Political Parties</a>
+  </div>
+
+  <div class="chapter">
+    <a href="civics_chapter7.pdf" target="_blank">Chapter 7: Outcomes of Democracy</a>
+  </div>
+
+  <div class="chapter">
+    <a href="civics_chapter8.pdf" target="_blank">Chapter 8: Challenges to Democracy</a>
+  </div>
+
+</body>
+</html>
