--- a/geography.html
+++ b/geography.html
@@ -1,1 +1,67 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Geography Notes - Class 10</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f6f9;
+      margin: 0;
+      padding: 20px;
+    }
+    h1 {
+      text-align: center;
+      color: #2c3e50;
+    }
+    .chapter {
+      background: white;
+      padding: 15px;
+      margin: 10px 0;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    .chapter a {
+      text-decoration: none;
+      font-size: 18px;
+      color: #4caf50; /* Green for Geography */
+    }
+    .chapter a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <h1>🌍 Geography Notes - Class 10</h1>
 
+  <div class="chapter">
+    <a href="geo_chapter1.pdf" target="_blank">Chapter 1: Resources and Development</a>
+  </div>
+
+  <div class="chapter">
+    <a href="geo_chapter2.pdf" target="_blank">Chapter 2: Forest and Wildlife Resources</a>
+  </div>
+
+  <div class="chapter">
+    <a href="geo_chapter3.pdf" target="_blank">Chapter 3: Water Resources</a>
+  </div>
+
+  <div class="chapter">
+    <a href="geo_chapter4.pdf" target="_blank">Chapter 4: Agriculture</a>
+  </div>
+
+  <div class="chapter">
+    <a href="geo_chapter5.pdf" target="_blank">Chapter 5: Minerals and Energy Resources</a>
+  </div>
+
+  <div class="chapter">
+    <a href="geo_chapter6.pdf" target="_blank">Chapter 6: Manufacturing Industries</a>
+  </div>
+
+  <div class="chapter">
+    <a href="geo_chapter7.pdf" target="_blank">Chapter 7: Lifelines of National Economy</a>
+  </div>
+
+</body>
+</html>
