--- a/economics.html
+++ b/economics.html
@@ -1,1 +1,59 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Economics Notes - Class 10</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f6f9;
+      margin: 0;
+      padding: 20px;
+    }
+    h1 {
+      text-align: center;
+      color: #2c3e50;
+    }
+    .chapter {
+      background: white;
+      padding: 15px;
+      margin: 10px 0;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    .chapter a {
+      text-decoration: none;
+      font-size: 18px;
+      color: #e91e63; /* Pink for Economics */
+    }
+    .chapter a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <h1>📊 Economics Notes - Class 10</h1>
 
+  <div class="chapter">
+    <a href="eco_chapter1.pdf" target="_blank">Chapter 1: Development</a>
+  </div>
+
+  <div class="chapter">
+    <a href="eco_chapter2.pdf" target="_blank">Chapter 2: Sectors of the Indian Economy</a>
+  </div>
+
+  <div class="chapter">
+    <a href="eco_chapter3.pdf" target="_blank">Chapter 3: Money and Credit</a>
+  </div>
+
+  <div class="chapter">
+    <a href="eco_chapter4.pdf" target="_blank">Chapter 4: Globalisation and the Indian Economy</a>
+  </div>
+
+  <div class="chapter">
+    <a href="eco_chapter5.pdf" target="_blank">Chapter 5: Consumer Rights</a>
+  </div>
+
+</body>
+</html>
