--- a/math.html
+++ b/math.html
@@ -1,1 +1,99 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mathematics Notes - Class 10</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f6f9;
+      margin: 0;
+      padding: 20px;
+    }
+    h1 {
+      text-align: center;
+      color: #2c3e50;
+    }
+    .chapter {
+      background: white;
+      padding: 15px;
+      margin: 10px 0;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    .chapter a {
+      text-decoration: none;
+      font-size: 18px;
+      color: #2196f3; /* Blue for Maths */
+    }
+    .chapter a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <h1>➗ Mathematics Notes - Class 10</h1>
 
+  <div class="chapter">
+    <a href="math_chapter1.pdf" target="_blank">Chapter 1: Real Numbers</a>
+  </div>
+
+  <div class="chapter">
+    <a href="math_chapter2.pdf" target="_blank">Chapter 2: Polynomials</a>
+  </div>
+
+  <div class="chapter">
+    <a href="math_chapter3.pdf" target="_blank">Chapter 3: Pair of Linear Equations in Two Variables</a>
+  </div>
+
+  <div class="chapter">
+    <a href="math_chapter4.pdf" target="_blank">Chapter 4: Quadratic Equations</a>
+  </div>
+
+  <div class="chapter">
+    <a href="math_chapter5.pdf" target="_blank">Chapter 5: Arithmetic Progressions</a>
+  </div>
+
+  <div class="chapter">
+    <a href="math_chapter6.pdf" target="_blank">Chapter 6: Triangles</a>
+  </div>
+
+  <div class="chapter">
+    <a href="math_chapter7.pdf" target="_blank">Chapter 7: Coordinate Geometry</a>
+  </div>
+
+  <div class="chapter">
+    <a href="math_chapter8.pdf" target="_blank">Chapter 8: Introduction to Trigonometry</a>
+  </div>
+
+  <div class="chapter">
+    <a href="math_chapter9.pdf" target="_blank">Chapter 9: Applications of Trigonometry</a>
+  </div>
+
+  <div class="chapter">
+    <a href="math_chapter10.pdf" target="_blank">Chapter 10: Circles</a>
+  </div>
+
+  <div class="chapter">
+    <a href="math_chapter11.pdf" target="_blank">Chapter 11: Constructions</a>
+  </div>
+
+  <div class="chapter">
+    <a href="math_chapter12.pdf" target="_blank">Chapter 12: Areas Related to Circles</a>
+  </div>
+
+  <div class="chapter">
+    <a href="math_chapter13.pdf" target="_blank">Chapter 13: Surface Areas and Volumes</a>
+  </div>
+
+  <div class="chapter">
+    <a href="math_chapter14.pdf" target="_blank">Chapter 14: Statistics</a>
+  </div>
+
+  <div class="chapter">
+    <a href="math_chapter15.pdf" target="_blank">Chapter 15: Probability</a>
+  </div>
+
+</body>
+</html>
