--- a/english.html
+++ b/english.html
@@ -1,1 +1,66 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>English Notes - Class 10</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f6f9;
+      margin: 0;
+      padding: 20px;
+    }
+    h1, h2 {
+      text-align: center;
+      color: #2c3e50;
+    }
+    .chapter {
+      background: white;
+      padding: 15px;
+      margin: 10px 0;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    .chapter a {
+      text-decoration: none;
+      font-size: 18px;
+      color: #9c27b0; /* Purple for English */
+    }
+    .chapter a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+  <h1>📘 English Notes - Class 10</h1>
 
+  <h2>📖 First Flight</h2>
+
+  <div class="chapter"><a href="english_ff_chapter1.pdf" target="_blank">Chapter 1: A Letter to God</a></div>
+  <div class="chapter"><a href="english_ff_chapter2.pdf" target="_blank">Chapter 2: Nelson Mandela: Long Walk to Freedom</a></div>
+  <div class="chapter"><a href="english_ff_chapter3.pdf" target="_blank">Chapter 3: Two Stories about Flying</a></div>
+  <div class="chapter"><a href="english_ff_chapter4.pdf" target="_blank">Chapter 4: From the Diary of Anne Frank</a></div>
+  <div class="chapter"><a href="english_ff_chapter5.pdf" target="_blank">Chapter 5: The Hundred Dresses – I</a></div>
+  <div class="chapter"><a href="english_ff_chapter6.pdf" target="_blank">Chapter 6: The Hundred Dresses – II</a></div>
+  <div class="chapter"><a href="english_ff_chapter7.pdf" target="_blank">Chapter 7: Glimpses of India</a></div>
+  <div class="chapter"><a href="english_ff_chapter8.pdf" target="_blank">Chapter 8: Mijbil the Otter</a></div>
+  <div class="chapter"><a href="english_ff_chapter9.pdf" target="_blank">Chapter 9: Madam Rides the Bus</a></div>
+  <div class="chapter"><a href="english_ff_chapter10.pdf" target="_blank">Chapter 10: The Sermon at Benares</a></div>
+  <div class="chapter"><a href="english_ff_chapter11.pdf" target="_blank">Chapter 11: The Proposal (Play)</a></div>
+
+  <h2>📖 Footprints without Feet</h2>
+
+  <div class="chapter"><a href="english_fw_chapter1.pdf" target="_blank">Chapter 1: A Triumph of Surgery</a></div>
+  <div class="chapter"><a href="english_fw_chapter2.pdf" target="_blank">Chapter 2: The Thief’s Story</a></div>
+  <div class="chapter"><a href="english_fw_chapter3.pdf" target="_blank">Chapter 3: The Midnight Visitor</a></div>
+  <div class="chapter"><a href="english_fw_chapter4.pdf" target="_blank">Chapter 4: A Question of Trust</a></div>
+  <div class="chapter"><a href="english_fw_chapter5.pdf" target="_blank">Chapter 5: Footprints without Feet</a></div>
+  <div class="chapter"><a href="english_fw_chapter6.pdf" target="_blank">Chapter 6: The Making of a Scientist</a></div>
+  <div class="chapter"><a href="english_fw_chapter7.pdf" target="_blank">Chapter 7: The Necklace</a></div>
+  <div class="chapter"><a href="english_fw_chapter8.pdf" target="_blank">Chapter 8: The Hack Driver</a></div>
+  <div class="chapter"><a href="english_fw_chapter9.pdf" target="_blank">Chapter 9: Bholi</a></div>
+  <div class="chapter"><a href="english_fw_chapter10.pdf" target="_blank">Chapter 10: The Book That Saved the Earth</a></div>
+
+</body>
+</html>
