--- a/hindi.html
+++ b/hindi.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html lang="hi">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Hindi Notes - Class 10</title>
+  <style>
+    body { font-family: Arial, sans-serif; background:#f4f6f9; margin:0; padding:20px; }
+    h1, h2 { text-align:center; color:#2c3e50; }
+    .chapter { background:#fff; padding:15px; margin:10px 0; border-radius:10px; box-shadow:0 2px 5px rgba(0,0,0,.1); }
+    .chapter a { text-decoration:none; font-size:18px; color:#d32f2f; }
+    .chapter a:hover { text-decoration:underline; }
+  </style>
+</head>
+<body>
+  <h1>📕 हिंदी नोट्स - कक्षा 10</h1>
 
+  <!-- Kshitij (Poetry) -->
+  <h2>📖 क्षितिज (Kshitij) — काव्य खंड</h2>
+
+  <div class="chapter"><a href="hindi_kshitij_poem1.pdf" target="_blank">1. सूरदास</a></div>
+  <div class="chapter"><a href="hindi_kshitij_poem2.pdf" target="_blank">2. तुलसीदास</a></div>
+  <div class="chapter"><a href="hindi_kshitij_poem3.pdf" target="_blank">3. जयशंकर प्रसाद</a></div>
+  <div class="chapter"><a href="hindi_kshitij_poem4.pdf" target="_blank">4. सूर्यकांत त्रिपाठी ‘निराला’ (उत्साह / अट नहीं रही है)</a></div>
+  <div class="chapter"><a href="hindi_kshitij_poem5.pdf" target="_blank">5. नागार्जुन (यह दंतुरित मुस्कान …)</a></div>
+  <div class="chapter"><a href="hindi_kshitij_poem6.pdf" target="_blank">6. मंगलेश डबराल (संगतकार)</a></div>
+
+  <!-- Kritika (exact syllabus you gave) -->
+  <h2>📖 कृतिका (Kritika)</h2>
+
+  <div class="chapter"><a href="hindi_kritika_bhumika.pdf" target="_blank">भूमिका</a></div>
+  <div class="chapter"><a href="hindi_kritika_mata_ka_anchal.pdf" target="_blank">पाठ: माता का आँचल</a></div>
+  <div class="chapter"><a href="hindi_kritika_sana_sana_haath_jodi.pdf" target="_blank">पाठ: साना-साना हाथ जोड़ी</a></div>
+  <div class="chapter"><a href="hindi_kritika_main_kyon_likhta_hun.pdf" target="_blank">पाठ: मैं क्यों लिखता हूँ</a></div>
+
+</body>
+</html>
