--- a/hindi.html
+++ b/hindi.html
@@ -1,37 +1,43 @@
 <!DOCTYPE html>
-<html lang="hi">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hindi Notes - Class 10</title>
-  <style>
-    body { font-family: Arial, sans-serif; background:#f4f6f9; margin:0; padding:20px; }
-    h1, h2 { text-align:center; color:#2c3e50; }
-    .chapter { background:#fff; padding:15px; margin:10px 0; border-radius:10px; box-shadow:0 2px 5px rgba(0,0,0,.1); }
-    .chapter a { text-decoration:none; font-size:18px; color:#d32f2f; }
-    .chapter a:hover { text-decoration:underline; }
-  </style>
+  <title>Hindi Notes</title>
 </head>
 <body>
-  <h1>📕 हिंदी नोट्स - कक्षा 10</h1>
+  <h1>Hindi - Class 10</h1>
 
-  <!-- Kshitij (Poetry) -->
-  <h2>📖 क्षितिज (Kshitij) — काव्य खंड</h2>
+  <!-- Kshitij Kavya Khand -->
+  <h2>Kshitij (काव्य खंड)</h2>
+  <ul>
+    <li><a href="pdf/hindi/kshitij/1_Surdas.pdf" target="_blank">1. सूरदास – ऊधो, तुम हौं अति बुद्धिमान</a></li>
+    <li><a href="pdf/hindi/kshitij/2_Tulsidas.pdf" target="_blank">2. तुलसीदास – राम-लक्ष्मण-परशुराम संवाद</a></li>
+    <li><a href="pdf/hindi/kshitij/3_JayashankarPrasad.pdf" target="_blank">3. जयशंकर प्रसाद – आत्मकथ्य</a></li>
+    <li><a href="pdf/hindi/kshitij/4_SuryakantTripathiNirala.pdf" target="_blank">4. सूर्यकांत त्रिपाठी ‘निराला’ – उत्साह, अट नहीं रही है</a></li>
+    <li><a href="pdf/hindi/kshitij/5_Nagarjun.pdf" target="_blank">5. नागार्जुन – यह दंतुरित मुस्कान, फसल</a></li>
+    <li><a href="pdf/hindi/kshitij/6_MangleshDabaral.pdf" target="_blank">6. मंगलेश डबराल – संगतकार</a></li>
+  </ul>
 
-  <div class="chapter"><a href="hindi_kshitij_poem1.pdf" target="_blank">1. सूरदास</a></div>
-  <div class="chapter"><a href="hindi_kshitij_poem2.pdf" target="_blank">2. तुलसीदास</a></div>
-  <div class="chapter"><a href="hindi_kshitij_poem3.pdf" target="_blank">3. जयशंकर प्रसाद</a></div>
-  <div class="chapter"><a href="hindi_kshitij_poem4.pdf" target="_blank">4. सूर्यकांत त्रिपाठी ‘निराला’ (उत्साह / अट नहीं रही है)</a></div>
-  <div class="chapter"><a href="hindi_kshitij_poem5.pdf" target="_blank">5. नागार्जुन (यह दंतुरित मुस्कान …)</a></div>
-  <div class="chapter"><a href="hindi_kshitij_poem6.pdf" target="_blank">6. मंगलेश डबराल (संगतकार)</a></div>
+  <!-- Kshitij Gadya Khand -->
+  <h2>Kshitij (गद्य खंड)</h2>
+  <ul>
+    <li><a href="pdf/hindi/kshitij/7_SwayamPrakash.pdf" target="_blank">7. स्वयं प्रकाश – नेताजी का चश्मा</a></li>
+    <li><a href="pdf/hindi/kshitij/8_RamvrikshaBenipuri.pdf" target="_blank">8. रामवृक्ष बेनीपुरी – बालगोबिन भगत</a></li>
+    <li><a href="pdf/hindi/kshitij/9_Yashpal.pdf" target="_blank">9. यशपाल – लखनवी अंदाज़</a></li>
+    <li><a href="pdf/hindi/kshitij/10_MannuBhandari.pdf" target="_blank">10. मन्नू भंडारी – एक कहानी यह भी</a></li>
+    <li><a href="pdf/hindi/kshitij/11_YatindraMishra.pdf" target="_blank">11. यतीन्द्र मिश्र – नौबतखाने में इबादत</a></li>
+    <li><a href="pdf/hindi/kshitij/12_BhavanandKaushlaya.pdf" target="_blank">12. भवानी आनंद कौशल्यान – संस्कृति</a></li>
+  </ul>
 
-  <!-- Kritika (exact syllabus you gave) -->
-  <h2>📖 कृतिका (Kritika)</h2>
-
-  <div class="chapter"><a href="hindi_kritika_bhumika.pdf" target="_blank">भूमिका</a></div>
-  <div class="chapter"><a href="hindi_kritika_mata_ka_anchal.pdf" target="_blank">पाठ: माता का आँचल</a></div>
-  <div class="chapter"><a href="hindi_kritika_sana_sana_haath_jodi.pdf" target="_blank">पाठ: साना-साना हाथ जोड़ी</a></div>
-  <div class="chapter"><a href="hindi_kritika_main_kyon_likhta_hun.pdf" target="_blank">पाठ: मैं क्यों लिखता हूँ</a></div>
+  <!-- Kritika -->
+  <h2>Kritika (कृतिका भाग–2)</h2>
+  <ul>
+    <li><a href="pdf/hindi/kritika/1_Bhumika.pdf" target="_blank">1. भूमिका</a></li>
+    <li><a href="pdf/hindi/kritika/2_MataKaAnchal.pdf" target="_blank">2. माता का आँचल</a></li>
+    <li><a href="pdf/hindi/kritika/3_SanaSanaHathJodi.pdf" target="_blank">3. साना-साना हाथ जोड़ि</a></li>
+    <li><a href="pdf/hindi/kritika/4_MainKyonLikhtaHun.pdf" target="_blank">4. मैं क्यों लिखता हूँ</a></li>
+  </ul>
 
 </body>
 </html>
