--- a/english.html
+++ b/english.html
@@ -35,7 +35,7 @@
 <body>
   <h1>📘 English Notes - Class 10</h1>
 
-  <h2>📖 First Flight</h2>
+  <h2>📖 First Flight (Prose)</h2>
 
   <div class="chapter"><a href="english_ff_chapter1.pdf" target="_blank">Chapter 1: A Letter to God</a></div>
   <div class="chapter"><a href="english_ff_chapter2.pdf" target="_blank">Chapter 2: Nelson Mandela: Long Walk to Freedom</a></div>
@@ -48,6 +48,20 @@
   <div class="chapter"><a href="english_ff_chapter9.pdf" target="_blank">Chapter 9: Madam Rides the Bus</a></div>
   <div class="chapter"><a href="english_ff_chapter10.pdf" target="_blank">Chapter 10: The Sermon at Benares</a></div>
   <div class="chapter"><a href="english_ff_chapter11.pdf" target="_blank">Chapter 11: The Proposal (Play)</a></div>
+
+  <h2>✍️ First Flight (Poems)</h2>
+
+  <div class="chapter"><a href="english_poem1.pdf" target="_blank">Poem 1: Dust of Snow</a></div>
+  <div class="chapter"><a href="english_poem2.pdf" target="_blank">Poem 2: Fire and Ice</a></div>
+  <div class="chapter"><a href="english_poem3.pdf" target="_blank">Poem 3: A Tiger in the Zoo</a></div>
+  <div class="chapter"><a href="english_poem4.pdf" target="_blank">Poem 4: How to Tell Wild Animals</a></div>
+  <div class="chapter"><a href="english_poem5.pdf" target="_blank">Poem 5: The Ball Poem</a></div>
+  <div class="chapter"><a href="english_poem6.pdf" target="_blank">Poem 6: Amanda!</a></div>
+  <div class="chapter"><a href="english_poem7.pdf" target="_blank">Poem 7: Animals</a></div>
+  <div class="chapter"><a href="english_poem8.pdf" target="_blank">Poem 8: The Trees</a></div>
+  <div class="chapter"><a href="english_poem9.pdf" target="_blank">Poem 9: Fog</a></div>
+  <div class="chapter"><a href="english_poem10.pdf" target="_blank">Poem 10: The Tale of Custard the Dragon</a></div>
+  <div class="chapter"><a href="english_poem11.pdf" target="_blank">Poem 11: For Anne Gregory</a></div>
 
   <h2>📖 Footprints without Feet</h2>
 
