--- a/index.html
+++ b/index.html
@@ -33,21 +33,23 @@
     }
 
     header h1 { 
-      font-size: 2.6rem; 
-      font-weight: bold; 
+      font-size: 2.8rem; 
+      font-weight: 900; /* Super Bold */
       margin-bottom: 15px; 
       animation: glow 2s infinite alternate; 
+      text-transform: uppercase;
+      letter-spacing: 1.5px;
     }
 
     header p { 
-      font-size: 1.2rem; 
-      font-weight: 500; 
+      font-size: 1.25rem; 
+      font-weight: 600; 
       opacity: 0.95; 
     }
 
     @keyframes glow {
-      from { text-shadow: 0 0 10px #fff, 0 0 20px #ff4b2b, 0 0 30px #ff416c; }
-      to { text-shadow: 0 0 20px #fff, 0 0 30px #2575fc, 0 0 40px #6a11cb; }
+      from { text-shadow: 0 0 12px #fff, 0 0 22px #ff4b2b, 0 0 32px #ff416c; }
+      to { text-shadow: 0 0 25px #fff, 0 0 35px #2575fc, 0 0 45px #6a11cb; }
     }
 
     /* Banner */
@@ -55,8 +57,8 @@
       background: linear-gradient(135deg, #ff512f, #dd2476);
       padding: 15px;
       text-align: center;
-      font-size: 1.05rem;
-      font-weight: bold;
+      font-size: 1.1rem;
+      font-weight: 700;
       color: #fff;
       letter-spacing: 0.5px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.3);
@@ -69,15 +71,17 @@
     }
 
     .container h2 { 
-      font-size: 1.9rem; 
-      margin-bottom: 10px; 
+      font-size: 2rem; 
+      margin-bottom: 12px; 
       color: #fff; 
+      font-weight: 800;
     }
 
     .container p { 
-      font-size: 1rem; 
+      font-size: 1.05rem; 
       margin-bottom: 25px; 
       opacity: 0.95; 
+      font-weight: 500;
     }
 
     /* Subject Cards */
@@ -104,8 +108,19 @@
       box-shadow: 0 6px 18px rgba(0,0,0,0.4);
     }
 
-    .card h3 { margin-bottom: 8px; font-size: 1.3rem; }
-    .card p { margin: 0; font-size: 0.95rem; opacity: 0.9; }
+    .card h3 { 
+      margin-bottom: 8px; 
+      font-size: 1.35rem; 
+      font-weight: 800;
+      text-transform: uppercase;
+    }
+
+    .card p { 
+      margin: 0; 
+      font-size: 1rem; 
+      opacity: 0.9; 
+      font-weight: 500;
+    }
 
     /* Footer */
     footer {
@@ -115,6 +130,7 @@
       background: rgba(0,0,0,0.6);
       font-size: 0.9rem;
       color: #ddd;
+      font-weight: 600;
     }
   </style>
 </head>
