--- a/history.html
+++ b/history.html
@@ -3,57 +3,93 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>History Notes - Class 10</title>
+  <title>📘 History Notes - Class 10</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f4f6f9;
       margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(135deg, #6a11cb, #2575fc);
+      color: #fff;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       padding: 20px;
     }
+
     h1 {
+      font-size: 2.2rem;
       text-align: center;
-      color: #2c3e50;
+      margin: 20px 0;
+      font-weight: bold;
+      text-shadow: 2px 2px 6px rgba(0,0,0,0.4);
     }
+
     .chapter {
-      background: white;
-      padding: 15px;
-      margin: 10px 0;
-      border-radius: 10px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      background: rgba(255, 255, 255, 0.15);
+      padding: 20px;
+      margin: 15px 0;
+      width: 90%;
+      max-width: 600px;
+      border-radius: 15px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+      backdrop-filter: blur(6px);
+      transition: transform 0.2s ease, background 0.3s ease;
     }
+
+    .chapter:hover {
+      transform: scale(1.05);
+      background: rgba(255, 255, 255, 0.25);
+    }
+
     .chapter a {
+      display: block;
       text-decoration: none;
-      font-size: 18px;
-      color: #007bff;
+      font-size: 1.2rem;
+      color: #fff;
+      font-weight: 600;
+      text-align: center;
     }
+
     .chapter a:hover {
-      text-decoration: underline;
+      color: #ffe600;
+      text-shadow: 1px 1px 6px rgba(0,0,0,0.6);
+    }
+
+    footer {
+      margin-top: auto;
+      text-align: center;
+      font-size: 0.9rem;
+      color: #ddd;
+      padding: 15px 0;
     }
   </style>
 </head>
 <body>
-  <h1>📘 History Notes - Class 10</h1>
+  <h1>📘 Class 10 History Notes</h1>
 
   <div class="chapter">
-    <a href="chapter1.pdf" target="_blank">Chapter 1: The Rise of Nationalism in Europe</a>
+    <a href="chapter1.pdf" target="_blank">📖 Chapter 1: The Rise of Nationalism in Europe</a>
   </div>
 
   <div class="chapter">
-    <a href="chapter2.pdf" target="_blank">Chapter 2: Nationalism in India</a>
+    <a href="chapter2.pdf" target="_blank">📖 Chapter 2: Nationalism in India</a>
   </div>
 
   <div class="chapter">
-    <a href="chapter3.pdf" target="_blank">Chapter 3: The Making of a Global World</a>
+    <a href="chapter3.pdf" target="_blank">📖 Chapter 3: The Making of a Global World</a>
   </div>
 
   <div class="chapter">
-    <a href="chapter4.pdf" target="_blank">Chapter 4: The Age of Industrialisation</a>
+    <a href="chapter4.pdf" target="_blank">📖 Chapter 4: The Age of Industrialisation</a>
   </div>
 
   <div class="chapter">
-    <a href="chapter5.pdf" target="_blank">Chapter 5: Print Culture and the Modern World</a>
+    <a href="chapter5.pdf" target="_blank">📖 Chapter 5: Print Culture and the Modern World</a>
   </div>
 
+  <footer>
+    ✨ Designed by Keshav Kunal | Class 10 Study Hub ✨
+  </footer>
 </body>
 </html>
